<resources>
    <string name="app_name">QzoneBotAndroid</string>
    <string name="Start">Button</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_webview">WebViewActivity</string>
    <string name="preferences_mirai_settings">机器人设置</string>
    <string name="preferences_account">账号</string>
    <string name="preferences_password">密码</string>
    <string name="preferences_protocol">协议</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_start">启动</string>
    <string name="btn_setting">设置</string>
    <string name="btn_qzone_login">登陆QQ空间</string>
    <string name="btn_captcha">确定</string>
</resources>