<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_mirai_settings">

        <EditTextPreference
            app:key="account"
            app:title="@string/preferences_account"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="password"
            app:title="@string/preferences_password"
            app:useSimpleSummaryProvider="false" />
        <ListPreference
            app:defaultValue="ANDROID_PHONE"
            app:entries="@array/protocol_entries"
            app:entryValues="@array/protocol_values"
            app:key="protocol"
            app:title="@string/preferences_protocol"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>